Programa e banco de dados fucionando